--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="root"></div>
-  </body>
-</html>
- -->
-
  <!DOCTYPE html>
 <html lang="en">
 
@@ -319,6 +305,8 @@
   //</div>
 
   <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script> -->
+<script>  
+</script>
 </body>
 
 </html>
