--- a/public/index.html
+++ b/public/index.html
@@ -304,7 +304,8 @@
     </div>
   //</div>
 
-  <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script> -->
+  -->
+  <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script> 
 <script>  
 </script>
 </body>
